@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.rest;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
@@ -327,7 +326,7 @@ public class JobDefinitionRestServiceInteractionTest extends AbstractRestService
     params.put("executionDate", "a");
 
     String expectedMessage = "Invalid format: \"a\"";
-    String exceptionMessage = "The suspension state of Job Definition with id " + MockProvider.NON_EXISTING_JOB_DEFINITION_ID + " could not be updated due to: " + expectedMessage;
+    String exceptionMessage = "The suspension state of Job Definition with id %s could not be updated due to: %s".formatted(MockProvider.NON_EXISTING_JOB_DEFINITION_ID, expectedMessage);
 
     given()
       .pathParam("id", MockProvider.NON_EXISTING_JOB_DEFINITION_ID)
@@ -492,7 +491,7 @@ public class JobDefinitionRestServiceInteractionTest extends AbstractRestService
     params.put("executionDate", "a");
 
     String expectedMessage = "Invalid format: \"a\"";
-    String exceptionMessage = "The suspension state of Job Definition with id " + MockProvider.NON_EXISTING_JOB_DEFINITION_ID + " could not be updated due to: " + expectedMessage;
+    String exceptionMessage = "The suspension state of Job Definition with id %s could not be updated due to: %s".formatted(MockProvider.NON_EXISTING_JOB_DEFINITION_ID, expectedMessage);
 
     given()
       .pathParam("id", MockProvider.NON_EXISTING_JOB_DEFINITION_ID)
@@ -1733,7 +1732,7 @@ public class JobDefinitionRestServiceInteractionTest extends AbstractRestService
   }
 
   private List<JobDefinition> createMockJobDefinitionsTwoTenants() {
-    return Arrays.asList(
+    return List.of(
         MockProvider.mockJobDefinition().tenantId(MockProvider.EXAMPLE_TENANT_ID).build(),
         MockProvider.mockJobDefinition().tenantId(MockProvider.ANOTHER_EXAMPLE_TENANT_ID).build());
   }
