@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.test.api.authorization;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -52,7 +51,7 @@ import static org.mockito.Mockito.when;
 public class GroupAuthorizationTest extends AuthorizationTest {
 
   public static final String TEST_USER_ID = "testUser";
-  public static final List<String> TEST_GROUP_IDS = Arrays.asList("testGroup1", "testGroup2", "testGroup3");
+  public static final List<String> TEST_GROUP_IDS = List.of("testGroup1", "testGroup2", "testGroup3");
 
   @BeforeEach
   @Override
