@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.test.api.multitenancy.query.history;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -187,7 +186,7 @@ class MultiTenancyHistoricIncidentQueryTest {
   @Test
   void shouldQueryAuthenticatedTenant() {
     // given
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     // when
     HistoricIncidentQuery query = historyService.createHistoricIncidentQuery();
@@ -203,7 +202,7 @@ class MultiTenancyHistoricIncidentQueryTest {
   @Test
   void shouldQueryAuthenticatedTenants() {
     // given
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE, TENANT_TWO));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE, TENANT_TWO));
 
     // when
     HistoricIncidentQuery query = historyService.createHistoricIncidentQuery();
