@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.test.api.multitenancy.query.history;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -193,7 +192,7 @@ class MultiTenancyHistoricTaskInstanceQueryTest {
   @Test
   void shouldQueryAuthenticatedTenant() {
     // given
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     // when
     HistoricTaskInstanceQuery query = historyService.createHistoricTaskInstanceQuery();
@@ -209,7 +208,7 @@ class MultiTenancyHistoricTaskInstanceQueryTest {
   @Test
   void shouldQueryAuthenticatedTenants() {
     // given
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE, TENANT_TWO));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE, TENANT_TWO));
 
     // when
     HistoricTaskInstanceQuery query = historyService.createHistoricTaskInstanceQuery();
