@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.cmmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.cmmn.impl.CmmnModelConstants;
 
@@ -34,7 +33,7 @@ public class CaseTest extends CmmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
           new ChildElementAssumption(CaseFileModel.class, 0, 1),
           new ChildElementAssumption(CasePlanModel.class, 0, 1),
           new ChildElementAssumption(CmmnModelConstants.CMMN10_NS, CaseRole.class),
@@ -46,7 +45,7 @@ public class CaseTest extends CmmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
           new AttributeAssumption("name"),
           new AttributeAssumption(CmmnModelConstants.OPERATON_NS, "historyTimeToLive")
         );
