@@ -15,8 +15,7 @@
  * limitations under the License.
  */
 package org.operaton.bpm.integrationtest.functional.cdi;
-
-import java.util.Arrays;
+import java.util.List;
 
 import org.jboss.arquillian.container.test.api.Deployment;
 import org.jboss.arquillian.container.test.api.OperateOnDeployment;
@@ -78,7 +77,7 @@ public class CdiBeanDependentScopedAsyncTest extends AbstractFoxPlatformIntegrat
 
   @Test
   void testResolveBeanFromJobExecutor() {
-    assertThat(DependentScopedBean.lifecycle).isEqualTo(Arrays.asList("post-construct-invoked", "bean-invoked", "pre-destroy-invoked"));
+    assertThat(DependentScopedBean.lifecycle).isEqualTo(List.of("post-construct-invoked", "bean-invoked", "pre-destroy-invoked"));
   }
 
 }
